--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
-    "react-navigation": "^1.0.0-beta.9"
+    "react-navigation": "^1.0.0-beta.9",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
