--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "htmlparser": "^1.7.7",
     "lodash": "^4.17.4",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
+    "react-native-html-parser": "0.0.4",
+    "react-native-swipe-gestures": "^1.0.2",
+    "react-native-swipeout": "^2.0.13",
     "react-navigation": "^1.0.0-beta.9",
     "superagent": "^3.5.2"
   },
