add loading logo

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "ReactProject",
-  "displayName": "ReactProject"
+  "name": "10 items or less",
+  "displayName": "10 items or less"
 }
