--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.44.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-html-parser": "0.0.4",
+    "react-native-loading-spinner-overlay": "^0.5.0",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-swipeout": "^2.0.13",
     "react-navigation": "^1.0.0-beta.9",
