--- a/ios/10 Items or Less.xcodeproj/xcshareddata/xcschemes/ReactProject-tvOS.xcscheme
+++ b/ios/10 Items or Less.xcodeproj/xcshareddata/xcschemes/ReactProject-tvOS.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "ReactProject-tvOS.app"
-               BlueprintName = "ReactProject-tvOS"
-               ReferencedContainer = "container:ReactProject.xcodeproj">
+               BuildableName = "10 Items or Less-tvOS.app"
+               BlueprintName = "10 Items or Less-tvOS"
+               ReferencedContainer = "container:10 Items or Less.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "ReactProject-tvOSTests.xctest"
-               BlueprintName = "ReactProject-tvOSTests"
-               ReferencedContainer = "container:ReactProject.xcodeproj">
+               BuildableName = "10 Items or Less-tvOSTests.xctest"
+               BlueprintName = "10 Items or Less-tvOSTests"
+               ReferencedContainer = "container:10 Items or Less.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "ReactProject-tvOSTests.xctest"
-               BlueprintName = "ReactProject-tvOSTests"
-               ReferencedContainer = "container:ReactProject.xcodeproj">
+               BuildableName = "10 Items or Less-tvOSTests.xctest"
+               BlueprintName = "10 Items or Less-tvOSTests"
+               ReferencedContainer = "container:10 Items or Less.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "ReactProject-tvOS.app"
-            BlueprintName = "ReactProject-tvOS"
-            ReferencedContainer = "container:ReactProject.xcodeproj">
+            BuildableName = "10 Items or Less-tvOS.app"
+            BlueprintName = "10 Items or Less-tvOS"
+            ReferencedContainer = "container:10 Items or Less.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "ReactProject-tvOS.app"
-            BlueprintName = "ReactProject-tvOS"
-            ReferencedContainer = "container:ReactProject.xcodeproj">
+            BuildableName = "10 Items or Less-tvOS.app"
+            BlueprintName = "10 Items or Less-tvOS"
+            ReferencedContainer = "container:10 Items or Less.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "ReactProject-tvOS.app"
-            BlueprintName = "ReactProject-tvOS"
-            ReferencedContainer = "container:ReactProject.xcodeproj">
+            BuildableName = "10 Items or Less-tvOS.app"
+            BlueprintName = "10 Items or Less-tvOS"
+            ReferencedContainer = "container:10 Items or Less.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
